--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@ body {font-family: "Lato", sans-serif}
     
     <audio controls>
         <source src="Laabam.ogg" type="audio/ogg">
-        <source src="C:\Users\P THARUN\OneDrive\Desktop\vs code\sounds 2.0\Homepage\Tamil Songs\tmp3\Yaazha-Yaazha-MassTamilan.io.mp3" type="audio/mpeg">
+        <source src="Yaazha-Yaazha-MassTamilan.io.mp3" type="audio/mpeg">
     </audio>
 
     <p style="font-size: 35px; color: white;">Yaazha Yaazha</p>
     
     <audio controls>
         <source src="Laabam.ogg" type="audio/ogg">
-        <source src="C:\Users\P THARUN\OneDrive\Desktop\vs code\sounds 2.0\Homepage\Tamil Songs\tmp3\Yaamili-Yaamiliya-MassTamilan.fm.mp3" type="audio/mpeg">
+        <source src="Yaamili-Yaamiliya-MassTamilan.fm.mp3" type="audio/mpeg">
     </audio>
 
     <img src="https://i.pinimg.com/originals/dc/c9/ce/dcc9cea8525b59b91d1a6ed0e27fff59.gif" class="aside" alt="music" style="width: 300px;height: 300px;">
